syntax = "proto3";
package monitor.proto;

message CpuStat{
    string cpu_name = 1;//cpu的名称
    float cpu_percent = 2;//cpu的使用率
    float usr_percent = 3;//用户对于CPU的使用率
    float system_percent = 4;//系统对于CPU的使用率
    float nice_percent = 5;//低用户nice对于CPU的使用率
    float idle_percent = 6;//空闲占CPU的使用率
    float io_wait_percent = 7;//IO等待占CPU的使用率
    float irq_percent = 8;
    float soft_irq_percent = 9;
  }